--- a/SavrApp/package.json
+++ b/SavrApp/package.json
@@ -27,6 +27,7 @@
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
+    "expo-localization": "~16.0.1",
     "expo-location": "~18.0.8",
     "expo-router": "^4.0.19",
     "expo-splash-screen": "~0.29.22",
@@ -34,12 +35,16 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "i18n": "^0.15.1",
+    "i18next": "^24.2.3",
     "lucide-react-native": "^0.484.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-i18next": "^15.4.1",
     "react-native": "0.76.7",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-localize": "^3.4.1",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
