fix apis, tokens, .env

--- a/SavrApp/package.json
+++ b/SavrApp/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eas-cli": "^16.0.1",
     "expo": "~52.0.40",
     "expo-blur": "~14.0.3",
@@ -43,6 +44,7 @@
     "react-i18next": "^15.4.1",
     "react-native": "0.76.7",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-localize": "^3.4.1",
     "react-native-maps": "1.18.0",
