--- a/SavrApp/package.json
+++ b/SavrApp/package.json
@@ -20,7 +20,6 @@
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
-    "babel-plugin-module-resolver": "^5.0.2",
     "eas-cli": "^16.0.1",
     "expo": "~52.0.40",
     "expo-blur": "~14.0.3",
@@ -36,6 +35,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "geolib": "^3.3.4",
     "i18n": "^0.15.1",
     "i18next": "^24.2.3",
     "lucide-react-native": "^0.484.0",
@@ -59,6 +59,7 @@
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react-test-renderer": "^18.3.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1"
