fixed image issues

--- a/SavrApp/sample.env
+++ b/SavrApp/sample.env
@@ -1,2 +1,2 @@
 API_URI=https://www.sevr.polaris.marek-mraz.com/api
-IMAGE_URI=https://www.sevr.polaris.marek-mraz.com
+HOST_URL=https://www.sevr.polaris.marek-mraz.com
