--- a/SavrApp/package.json
+++ b/SavrApp/package.json
@@ -50,12 +50,14 @@
     "react-native-localize": "^3.4.1",
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "1.18.0",
+    "react-native-maps-cluster": "^0.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "supercluster": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
