--- a/SavrApp/package.json
+++ b/SavrApp/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
@@ -54,6 +55,7 @@
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "1.18.0",
     "react-native-maps-cluster": "^0.3.1",
+    "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
