--- a/SavrApp/package.json
+++ b/SavrApp/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
+    "@stripe/stripe-react-native": "^0.44.0",
     "axios": "^1.8.4",
     "eas-cli": "^16.0.1",
     "expo": "~52.0.40",
