--- a/SavrApp/sample.env
+++ b/SavrApp/sample.env
@@ -1,2 +1,9 @@
 API_URI=https://www.sevr.polaris.marek-mraz.com/api
 HOST_URL=https://www.sevr.polaris.marek-mraz.com
+
+STRIPE_PUBLISHABLE_KEY=fdsafdas
+STRIPE_MERCHANT_ID=fdas
+STRIPE_URL_SCHEME=fdsa
+
+APP_NAME=Good2Rescue
+
